--- a/agency/linux/soo/soolink/plugins/Makefile
+++ b/agency/linux/soo/soolink/plugins/Makefile
@@ -4,3 +4,4 @@ obj-$(CONFIG_SOOLINK_PLUGIN_ETHERNET) += ethernet.o
 obj-$(CONFIG_SOOLINK_PLUGIN_BLUETOOTH) += bluetooth.o
 obj-$(CONFIG_SOOLINK_PLUGIN_LOOPBACK) += loopback.o
 
+obj-$(CONFIG_SOOLINK_PLUGIN_SIMULATION) += simulation.o
