--- a/agency/linux/soo/soolink/transceiver/Makefile
+++ b/agency/linux/soo/soolink/transceiver/Makefile
@@ -1,3 +1,3 @@
 
-obj-y := init.o sender.o receiver.o datalink.o discovery.o plugin.o
+obj-y := core.o datalink.o discovery.o plugin.o
 obj-y += datalink/
