ME allign: Add SOO.refSO3.

--- a/ME/SOO.refso3/so3/soo/drivers/vdoga12v6nmfront/Makefile
+++ b/ME/SOO.refso3/so3/soo/drivers/vdoga12v6nmfront/Makefile
@@ -1,3 +1,4 @@
-obj-$(CONFIG_VDOGA12V6NM_FRONTEND) := vdoga12v6nmfront.o
+# obj-$(CONFIG_VDOGA12V6NM_FRONTEND) := vdoga12v6nmfront.o
 
-vdoga12v6nmfront-y := vdoga12v6nm.o vbus.o 
+# vdoga12v6nmfront-y := vdoga12v6nm.o vbus.o 
+obj-y := vdoga12v6nm.o
