--- a/agency/linux/arch/arm/configs/vexpress_defconfig
+++ b/agency/linux/arch/arm/configs/vexpress_defconfig
@@ -3289,11 +3289,17 @@ CONFIG_SOOLINK_PLUGIN_ETHERNET=y
 #
 CONFIG_VDUMMY_BACKEND=y
 CONFIG_VUART_BACKEND=y
-CONFIG_VINPUT_BACKEND=y
+# CONFIG_VINPUT_BACKEND is not set
 # CONFIG_VDOGA12V6NM_BACKEND is not set
 # CONFIG_VWEATHER_BACKEND is not set
 # CONFIG_VUIHANDLER_BACKEND is not set
 # CONFIG_VLEDS_BACKEND is not set
 # CONFIG_VFB_BACKEND is not set
+# CONFIG_VNET_BACKEND is not set
+
+#
+# vnet backend config
+#
+# end of vnet backend config
 # end of Smart Object Oriented subsystem
 # end of SOO Framework and subsystems
