Booting until memory_init() - refactored memory mgmnt from SO3

--- a/agency/avz/lib/Makefile
+++ b/agency/avz/lib/Makefile
@@ -1,7 +1,7 @@
 #
 # Makefile for some libs needed in the kernel.
 #
-lib-y += string.o vsprintf.o ctype.o string_helpers.o
+lib-y += string.o vsprintf.o ctype.o string_helpers.o find_bit.o
 #lib-y += memzero.o ashldi3.o delay.o memchr.o  \
 	 setbit.o \
 	 ashrdi3.o lshrdi3.o div64.o lib1funcs.o muldi3.o testchangebit.o \
