--- a/agency/avz/mm/Makefile
+++ b/agency/avz/mm/Makefile
@@ -2,10 +2,8 @@
 # Makefile for the memory manager
 #
 
-
-obj-y += memory.o
-obj-y += page_alloc.o
-obj-y += xmalloc_tlsf.o
+obj-y += init.o memory.o
+obj-y += heap.o
 obj-y += percpu.o
 obj-y += fault.o
 
