--- a/agency/avz/mm/Makefile
+++ b/agency/avz/mm/Makefile
@@ -2,7 +2,7 @@
 # Makefile for the memory manager
 #
 
-obj-y += init.o memory.o
+obj-y += memory.o
 obj-y += heap.o
 obj-y += percpu.o
 obj-y += fault.o
