U-boot: now autoboot as for AArch32 version

--- a/u-boot/configs/virt64_defconfig
+++ b/u-boot/configs/virt64_defconfig
@@ -208,6 +208,7 @@ CONFIG_BUILD_TARGET=""
 CONFIG_FIT=y
 CONFIG_FIT_EXTERNAL_OFFSET=0x0
 CONFIG_FIT_ENABLE_SHA256_SUPPORT=y
+# CONFIG_FIT_SIGNATURE is not set
 CONFIG_FIT_VERBOSE=y
 # CONFIG_FIT_BEST_MATCH is not set
 CONFIG_LEGACY_IMAGE_FORMAT=y
@@ -243,10 +244,8 @@ CONFIG_BOOTSTAGE_STASH_SIZE=0x1000
 # CONFIG_SPI_BOOT is not set
 CONFIG_BOOTDELAY=2
 # CONFIG_USE_BOOTARGS is not set
-CONFIG_USE_BOOTCOMMAND=y
-CONFIG_BOOTCOMMAND="run distro_bootcmd"
-CONFIG_USE_PREBOOT=y
-CONFIG_PREBOOT="pci enum"
+# CONFIG_USE_BOOTCOMMAND is not set
+# CONFIG_USE_PREBOOT is not set
 
 #
 # Console
@@ -340,14 +339,14 @@ CONFIG_AUTOBOOT=y
 #
 CONFIG_CMD_BDI=y
 # CONFIG_CMD_CONFIG is not set
-CONFIG_CMD_CONSOLE=y
+# CONFIG_CMD_CONSOLE is not set
 # CONFIG_CMD_CPU is not set
 # CONFIG_CMD_LICENSE is not set
 
 #
 # Boot commands
 #
-CONFIG_CMD_BOOTD=y
+# CONFIG_CMD_BOOTD is not set
 CONFIG_CMD_BOOTM=y
 # CONFIG_CMD_BOOTZ is not set
 CONFIG_CMD_BOOTI=y
@@ -370,7 +369,7 @@ CONFIG_CMD_GO=y
 CONFIG_CMD_RUN=y
 CONFIG_CMD_IMI=y
 # CONFIG_CMD_IMLS is not set
-CONFIG_CMD_XIMG=y
+# CONFIG_CMD_XIMG is not set
 # CONFIG_CMD_FITUPD is not set
 # CONFIG_CMD_THOR_DOWNLOAD is not set
 # CONFIG_CMD_ZBOOT is not set
@@ -381,14 +380,14 @@ CONFIG_CMD_XIMG=y
 # CONFIG_CMD_ASKENV is not set
 CONFIG_CMD_EXPORTENV=y
 CONFIG_CMD_IMPORTENV=y
-CONFIG_CMD_EDITENV=y
+# CONFIG_CMD_EDITENV is not set
 # CONFIG_CMD_GREPENV is not set
 CONFIG_CMD_SAVEENV=y
 # CONFIG_CMD_ERASEENV is not set
 CONFIG_CMD_ENV_EXISTS=y
 # CONFIG_CMD_ENV_CALLBACK is not set
 # CONFIG_CMD_ENV_FLAGS is not set
-CONFIG_CMD_NVEDIT_EFI=y
+# CONFIG_CMD_NVEDIT_EFI is not set
 # CONFIG_CMD_NVEDIT_INFO is not set
 
 #
@@ -424,7 +423,7 @@ CONFIG_CMD_MEMORY=y
 # CONFIG_CMD_CLK is not set
 # CONFIG_CMD_DEMO is not set
 # CONFIG_CMD_DFU is not set
-CONFIG_CMD_DM=y
+# CONFIG_CMD_DM is not set
 # CONFIG_CMD_FDC is not set
 CONFIG_CMD_FLASH=y
 # CONFIG_CMD_FPGAD is not set
@@ -436,16 +435,15 @@ CONFIG_CMD_FLASH=y
 # CONFIG_CMD_IO is not set
 # CONFIG_CMD_IOTRACE is not set
 # CONFIG_CMD_I2C is not set
-CONFIG_CMD_LOADB=y
-CONFIG_CMD_LOADS=y
+# CONFIG_CMD_LOADB is not set
+# CONFIG_CMD_LOADS is not set
 # CONFIG_CMD_MMC is not set
 # CONFIG_CMD_MTD is not set
 # CONFIG_CMD_NAND is not set
-CONFIG_CMD_NVME=y
 # CONFIG_CMD_ONENAND is not set
 # CONFIG_CMD_OSD is not set
 CONFIG_CMD_PART=y
-CONFIG_CMD_PCI=y
+# CONFIG_CMD_PCI is not set
 # CONFIG_CMD_PINMUX is not set
 # CONFIG_CMD_POWEROFF is not set
 # CONFIG_CMD_READ is not set
@@ -455,7 +453,7 @@ CONFIG_CMD_SCSI=y
 # CONFIG_CMD_SDRAM is not set
 # CONFIG_CMD_TSI148 is not set
 # CONFIG_CMD_UNIVERSE is not set
-CONFIG_CMD_USB=y
+# CONFIG_CMD_USB is not set
 # CONFIG_CMD_USB_SDP is not set
 # CONFIG_CMD_USB_MASS_STORAGE is not set
 CONFIG_CMD_VIRTIO=y
@@ -464,9 +462,9 @@ CONFIG_CMD_VIRTIO=y
 # Shell scripting commands
 #
 CONFIG_CMD_ECHO=y
-CONFIG_CMD_ITEST=y
+# CONFIG_CMD_ITEST is not set
 CONFIG_CMD_SOURCE=y
-CONFIG_CMD_SETEXPR=y
+# CONFIG_CMD_SETEXPR is not set
 
 #
 # Android support commands
@@ -506,15 +504,15 @@ CONFIG_CMD_PXE=y
 # Misc commands
 #
 # CONFIG_CMD_BSP is not set
-CONFIG_CMD_BLOCK_CACHE=y
+# CONFIG_CMD_BLOCK_CACHE is not set
 # CONFIG_CMD_CACHE is not set
 # CONFIG_CMD_CONITRACE is not set
 # CONFIG_CMD_EFIDEBUG is not set
 # CONFIG_CMD_EXCEPTION is not set
-CONFIG_CMD_DATE=y
+# CONFIG_CMD_DATE is not set
 # CONFIG_CMD_TIME is not set
 # CONFIG_CMD_GETTIME is not set
-CONFIG_CMD_MISC=y
+# CONFIG_CMD_MISC is not set
 # CONFIG_MP is not set
 # CONFIG_CMD_TIMER is not set
 # CONFIG_CMD_QFW is not set
@@ -588,11 +586,12 @@ CONFIG_DTC=y
 #
 # Device Tree Control
 #
-# CONFIG_OF_CONTROL is not set
+CONFIG_OF_CONTROL=y
 # CONFIG_OF_BOARD_FIXUP is not set
 # CONFIG_OF_LIVE is not set
 # CONFIG_OF_SEPARATE is not set
 # CONFIG_OF_EMBED is not set
+CONFIG_OF_BOARD=y
 # CONFIG_OF_PRIOR_STAGE is not set
 CONFIG_DEFAULT_DEVICE_TREE=""
 # CONFIG_MULTI_DTB_FIT is not set
@@ -626,7 +625,17 @@ CONFIG_TFTP_BLOCKSIZE=512
 #
 # Generic Driver Options
 #
-# CONFIG_DM is not set
+CONFIG_DM=y
+# CONFIG_DM_WARN is not set
+# CONFIG_DM_DEBUG is not set
+# CONFIG_DM_DEVICE_REMOVE is not set
+# CONFIG_DM_STDIO is not set
+# CONFIG_DM_SEQ_ALIAS is not set
+# CONFIG_REGMAP is not set
+# CONFIG_DEVRES is not set
+# CONFIG_SIMPLE_BUS is not set
+# CONFIG_OF_TRANSLATE is not set
+# CONFIG_TRANSLATION_OFFSET is not set
 CONFIG_DM_DEV_READ_INLINE=y
 # CONFIG_ADC is not set
 # CONFIG_ADC_EXYNOS is not set
@@ -639,7 +648,7 @@ CONFIG_DM_DEV_READ_INLINE=y
 #
 # SATA/SCSI device support
 #
-CONFIG_AHCI_PCI=y
+# CONFIG_AHCI_PCI is not set
 # CONFIG_SATA_CEVA is not set
 # CONFIG_DWC_AHCI is not set
 # CONFIG_FSL_AHCI is not set
@@ -735,9 +744,8 @@ CONFIG_ARM_PSCI_FW=y
 # CONFIG_SYS_I2C_DW is not set
 # CONFIG_SYS_I2C_IMX_LPI2C is not set
 # CONFIG_SYS_I2C_MXC is not set
-CONFIG_INPUT=y
+# CONFIG_INPUT is not set
 # CONFIG_DM_KEYBOARD is not set
-# CONFIG_CROS_EC_KEYB is not set
 # CONFIG_TEGRA_KEYBOARD is not set
 # CONFIG_TWL4030_INPUT is not set
 
@@ -840,7 +848,7 @@ CONFIG_E1000=y
 # CONFIG_TSEC_ENET is not set
 # CONFIG_MEDIATEK_ETH is not set
 # CONFIG_HIGMACV300_ETH is not set
-CONFIG_NVME=y
+# CONFIG_NVME is not set
 CONFIG_PCI=y
 CONFIG_DM_PCI=y
 # CONFIG_DM_PCI_COMPAT is not set
@@ -899,21 +907,13 @@ CONFIG_PCIE_ECAM_GENERIC=y
 #
 # Real Time Clock
 #
-CONFIG_DM_RTC=y
+# CONFIG_DM_RTC is not set
 # CONFIG_RTC_ENABLE_32KHZ_OUTPUT is not set
-# CONFIG_RTC_PCF2127 is not set
-# CONFIG_RTC_DS1307 is not set
-# CONFIG_RTC_ISL1208 is not set
-# CONFIG_RTC_RV3029 is not set
-# CONFIG_RTC_RV8803 is not set
-# CONFIG_RTC_RX8010SJ is not set
 # CONFIG_RTC_RX8025 is not set
-CONFIG_RTC_PL031=y
-# CONFIG_RTC_MV is not set
+# CONFIG_RTC_PL031 is not set
 # CONFIG_RTC_S35392A is not set
 # CONFIG_RTC_MC146818 is not set
 # CONFIG_RTC_M41T62 is not set
-# CONFIG_RTC_STM32 is not set
 CONFIG_SCSI=y
 CONFIG_DM_SCSI=y
 
@@ -984,62 +984,7 @@ CONFIG_SYSRESET_PSCI=y
 #
 # TPM support
 #
-CONFIG_USB=y
-CONFIG_DM_USB=y
-# CONFIG_DM_USB_GADGET is not set
-
-#
-# USB Host Controller Drivers
-#
-CONFIG_USB_HOST=y
-# CONFIG_USB_XHCI_HCD is not set
-CONFIG_USB_EHCI_HCD=y
-# CONFIG_USB_EHCI_MSM is not set
-CONFIG_USB_EHCI_PCI=y
-# CONFIG_USB_EHCI_GENERIC is not set
-# CONFIG_USB_EHCI_FSL is not set
-# CONFIG_USB_OHCI_HCD is not set
-# CONFIG_USB_OHCI_PCI is not set
-# CONFIG_USB_UHCI_HCD is not set
-# CONFIG_USB_DWC2 is not set
-# CONFIG_USB_R8A66597_HCD is not set
-# CONFIG_USB_DWC3 is not set
-
-#
-# Legacy MUSB Support
-#
-# CONFIG_USB_MUSB_HCD is not set
-# CONFIG_USB_MUSB_UDC is not set
-
-#
-# MUSB Controller Driver
-#
-# CONFIG_USB_MUSB_HOST is not set
-# CONFIG_USB_MUSB_GADGET is not set
-# CONFIG_USB_MUSB_DA8XX is not set
-# CONFIG_USB_MUSB_TI is not set
-# CONFIG_USB_MUSB_AM35X is not set
-# CONFIG_USB_MUSB_DSPS is not set
-# CONFIG_USB_MUSB_PIO_ONLY is not set
-
-#
-# USB Phy
-#
-# CONFIG_TWL4030_USB is not set
-# CONFIG_OMAP_USB_PHY is not set
-# CONFIG_ROCKCHIP_USB2_PHY is not set
-
-#
-# ULPI drivers
-#
-
-#
-# USB peripherals
-#
-CONFIG_USB_STORAGE=y
-# CONFIG_USB_KEYBOARD is not set
-# CONFIG_USB_GADGET is not set
-# CONFIG_USB_HOST_ETHER is not set
+# CONFIG_USB is not set
 
 #
 # Graphics support
@@ -1153,9 +1098,9 @@ CONFIG_MD5=y
 # Compression Support
 #
 # CONFIG_LZ4 is not set
-CONFIG_LZMA=y
+# CONFIG_LZMA is not set
 # CONFIG_LZO is not set
-CONFIG_GZIP=y
+# CONFIG_GZIP is not set
 CONFIG_ZLIB=y
 # CONFIG_ZSTD is not set
 # CONFIG_SPL_LZ4 is not set
@@ -1163,7 +1108,7 @@ CONFIG_ZLIB=y
 # CONFIG_SPL_GZIP is not set
 # CONFIG_SPL_ZSTD is not set
 # CONFIG_ERRNO_STR is not set
-CONFIG_HEXDUMP=y
+# CONFIG_HEXDUMP is not set
 CONFIG_OF_LIBFDT=y
 # CONFIG_OF_LIBFDT_OVERLAY is not set
 # CONFIG_SPL_OF_LIBFDT is not set
@@ -1175,8 +1120,6 @@ CONFIG_OF_LIBFDT=y
 CONFIG_GENERATE_SMBIOS_TABLE=y
 CONFIG_SMBIOS_MANUFACTURER="emulation"
 CONFIG_EFI_LOADER=y
-CONFIG_EFI_GET_TIME=y
-# CONFIG_EFI_SET_TIME is not set
 CONFIG_EFI_DEVICE_PATH_TO_TEXT=y
 CONFIG_EFI_LOADER_HII=y
 CONFIG_EFI_UNICODE_COLLATION_PROTOCOL2=y
