linux: Updated Makefile to support different toolchains and arch based on build.conf

--- a/agency/linux/Makefile
+++ b/agency/linux/Makefile
@@ -359,11 +359,17 @@ include scripts/subarch.include
 # Note: Some architectures assign CROSS_COMPILE in their arch/*/Makefile
 
 # (SOO.tech) Usual toolchains for our systems
-#ARCH		?= arm
-ARCH	?= arm64
+include ../build.conf
 
-#CROSS_COMPILE	?= arm-linux-gnueabihf-
-CROSS_COMPILE ?= aarch64-linux-gnu-
+ifeq ($(PLATFORM),$(filter $(PLATFORM),rpi4_64 virt64))
+ARCH	= arm64
+CROSS_COMPILE = aarch64-linux-gnu-
+endif
+
+ifeq ($(PLATFORM),$(filter $(PLATFORM),vexpress rpi4))
+ARCH = arm
+CROSS_COMPILE = arm-linux-gnueabihf-
+endif
 
 # Architecture as present in compile.h
 UTS_MACHINE 	:= $(ARCH)
