AArch32: fixed regression on refso3 ME migration

--- a/ME/base/so3/dts/refso3.dts
+++ b/ME/base/so3/dts/refso3.dts
@@ -21,7 +21,8 @@
 #include "so3virt.dtsi"
 
 &ME {
-	domain-size = <0x400000>;
+	/* 8 MB should be enough for major cases. */
+	domain-size = <0x800000>;
 	
 	frontends {
 		/* Enabling vdummy for testing purposes */
