RPi4: update of default config

--- a/agency/linux/arch/arm64/configs/rpi4_64_defconfig
+++ b/agency/linux/arch/arm64/configs/rpi4_64_defconfig
@@ -4,10 +4,10 @@
 #
 
 #
-# Compiler: aarch64-none-linux-gnu-gcc (GNU Toolchain for the A-profile Architecture 10.2-2020.11 (arm-10.16)) 10.2.1 20201103
+# Compiler: aarch64-linux-gnu-gcc (GNU Toolchain for the A-profile Architecture 8.3-2019.03 (arm-rel-8.36)) 8.3.0
 #
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=100201
+CONFIG_GCC_VERSION=80300
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_HAS_ASM_GOTO=y
@@ -388,8 +388,6 @@ CONFIG_ARM64_SVE=y
 CONFIG_ARM64_MODULE_PLTS=y
 # CONFIG_ARM64_PSEUDO_NMI is not set
 # CONFIG_RANDOMIZE_BASE is not set
-CONFIG_CC_HAVE_STACKPROTECTOR_SYSREG=y
-CONFIG_STACKPROTECTOR_PER_TASK=y
 # end of Kernel Features
 
 #
@@ -1369,7 +1367,6 @@ CONFIG_ETHERNET=y
 CONFIG_NET_VENDOR_BROADCOM=y
 # CONFIG_B44 is not set
 # CONFIG_BCMGENET is not set
-CONFIG_BCMGENET_ETHERCAT=y
 # CONFIG_BNX2 is not set
 # CONFIG_CNIC is not set
 # CONFIG_TIGON3 is not set
@@ -4088,12 +4085,13 @@ CONFIG_STRICT_DEVMEM=y
 #
 # SOO Framework and subsystems
 #
+# CONFIG_DCM_LZ4 is not set
 
 #
 # Soolink plugins
 #
 # CONFIG_SOOLINK_PLUGIN_WLAN is not set
-# CONFIG_SOOLINK_PLUGIN_ETHERNET is not set
+CONFIG_SOOLINK_PLUGIN_ETHERNET=y
 # CONFIG_SOOLINK_PLUGIN_LOOPBACK is not set
 # CONFIG_SOOLINK_PLUGIN_SIMULATION is not set
 # end of Soolink plugins
@@ -4117,22 +4115,3 @@ CONFIG_VUART_BACKEND=y
 # end of vnet backend config
 # end of Smart Object Oriented subsystem
 # end of SOO Framework and subsystems
-
-#
-# OpenCN (AMP) Framework
-#
-CONFIG_RTDM_HZ=250
-# CONFIG_OPENCN_RT_APP is not set
-# CONFIG_OPENCN_RTS_TOGGLE is not set
-CONFIG_OPENCN_ETHERCAT_MASTER=y
-CONFIG_OPENCN_ETHERCAT_MASTER_NR=1
-CONFIG_OPENCN_ETHERCAT_MASTER_MAC0=""
-CONFIG_OPENCN_ETHERCAT_MASTER_DEBUG_LEVEL=0
-CONFIG_OPENCN_ETHERCAT_MASTER_MASTER_THREAD_PRIORITY=50
-CONFIG_OPENCN_ETHERCAT_MASTER_EOE_THREAD_PRIORITY=50
-CONFIG_OPENCN_ETHERCAT_MASTER_EOE_THREAD_PERIOD_NS=1000000
-# CONFIG_OPENCN_BECKHOFF_APP is not set
-# CONFIG_OPENCN_OPENBLAS is not set
-# CONFIG_VDUMMY_RING is not set
-# CONFIG_OPENCN_COMPANION is not set
-# end of OpenCN (AMP) Framework
