aarch64: update default configs and doc

--- a/agency/avz/configs/virt64_defconfig
+++ b/agency/avz/configs/virt64_defconfig
@@ -5,7 +5,7 @@
 # CONFIG_ARCH_ARM32 is not set
 CONFIG_ARCH_ARM64=y
 CONFIG_ARCH="arm64"
-CONFIG_CROSS_COMPILE="aarch64-linux-gnu-"
+CONFIG_CROSS_COMPILE="aarch64-none-linux-gnu-"
 CONFIG_RAM_BASE=0x40000000
 CONFIG_RAM_SIZE=0x3f000000
 
