--- a/agency/linux/Makefile
+++ b/agency/linux/Makefile
@@ -363,7 +363,7 @@ include ../build.conf
 
 ifeq ($(PLATFORM),$(filter $(PLATFORM),rpi4_64 virt64))
 ARCH	= arm64
-CROSS_COMPILE = aarch64-linux-gnu-
+CROSS_COMPILE = aarch64-none-linux-gnu-
 endif
 
 ifeq ($(PLATFORM),$(filter $(PLATFORM),vexpress rpi4))
