[rp4] Fixed regression in soo/kernel/setup.c during fixup_pv_table()

--- a/agency/linux/arch/arm/boot/dts/bcm2711.dtsi
+++ b/agency/linux/arch/arm/boot/dts/bcm2711.dtsi
@@ -320,7 +320,7 @@
 		};
 #endif /* SOO.tech */
 	};
-
+#if 0
 	scb {
 		compatible = "simple-bus";
 		#address-cells = <2>;
@@ -328,6 +328,7 @@
 
 		ranges = <0x0 0x7c000000  0x0 0xfc000000  0x03800000>;
 	};
+#endif
 };
 
 &clk_osc {
