--- a/agency/avz/arch/Kconfig
+++ b/agency/avz/arch/Kconfig
@@ -18,8 +18,8 @@ config ARCH
 
 config CROSS_COMPILE
 	string
-	default "arm-none-linux-gnueabihf-" if ARCH_ARM32
-	default "aarch64-none-linux-gnu-" if ARCH_ARM64
+	default "arm-linux-gnueabihf-" if ARCH_ARM32
+	default "aarch64-linux-gnu-" if ARCH_ARM64
 
 
 source "arch/arm32/Kconfig"
