Increased size of refso3 (without ramfs), moving to arm-none-linux-gnueabihf and doc

--- a/agency/rootfs/configs/rpi4_defconfig
+++ b/agency/rootfs/configs/rpi4_defconfig
@@ -260,8 +260,8 @@ BR2_TOOLCHAIN_EXTERNAL_PATH=""
 BR2_TOOLCHAIN_EXTERNAL_GLIBC=y
 BR2_PACKAGE_HAS_TOOLCHAIN_EXTERNAL=y
 BR2_PACKAGE_PROVIDES_TOOLCHAIN_EXTERNAL="toolchain-external-custom"
-BR2_TOOLCHAIN_EXTERNAL_PREFIX="arm-linux-gnueabihf"
-BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-linux-gnueabihf"
+BR2_TOOLCHAIN_EXTERNAL_PREFIX="arm-none-linux-gnueabihf"
+BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-none-linux-gnueabihf"
 # BR2_TOOLCHAIN_EXTERNAL_GCC_9 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_8 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_7 is not set
