--- a/u-boot/Makefile
+++ b/u-boot/Makefile
@@ -250,7 +250,7 @@ endif
 
 ifeq ($(PLATFORM),$(filter $(PLATFORM),vexpress rpi4))
 ARCH = arm
-CROSS_COMPILE = arm-linux-gnueabihf-
+CROSS_COMPILE = arm-none-linux-gnueabihf-
 endif
 
 KCONFIG_CONFIG	?= .config
