Improved vdevback management and improved saveme/restoreme apps

--- a/agency/usr/apps/CMakeLists.txt
+++ b/agency/usr/apps/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(saveme saveme.c)
 add_executable(restoreme restoreme.c)
 add_executable(shutdownme shutdownme.c)
 
+target_link_libraries(saveme zip)
+target_link_libraries(restoreme zip)
