[rpi4] Upgrade defconfig and solved various warnings in usr/ (strncat, strncpy)

--- a/agency/rootfs/configs/rpi4_defconfig
+++ b/agency/rootfs/configs/rpi4_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02-rc3-g118c0b139-dirty Configuration
+# Buildroot 2020.02-rc3-g26270d1829-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -8,6 +8,7 @@ BR2_HOST_GCC_AT_LEAST_5=y
 BR2_HOST_GCC_AT_LEAST_6=y
 BR2_HOST_GCC_AT_LEAST_7=y
 BR2_HOST_GCC_AT_LEAST_8=y
+BR2_HOST_GCC_AT_LEAST_9=y
 
 #
 # Target options
@@ -198,9 +199,9 @@ BR2_STRIP_EXCLUDE_DIRS=""
 # BR2_OPTIMIZE_0 is not set
 # BR2_OPTIMIZE_1 is not set
 # BR2_OPTIMIZE_2 is not set
-# BR2_OPTIMIZE_3 is not set
+BR2_OPTIMIZE_3=y
 # BR2_OPTIMIZE_G is not set
-BR2_OPTIMIZE_S=y
+# BR2_OPTIMIZE_S is not set
 # BR2_OPTIMIZE_FAST is not set
 # BR2_GOOGLE_BREAKPAD_ENABLE is not set
 # BR2_STATIC_LIBS is not set
@@ -262,10 +263,10 @@ BR2_PACKAGE_HAS_TOOLCHAIN_EXTERNAL=y
 BR2_PACKAGE_PROVIDES_TOOLCHAIN_EXTERNAL="toolchain-external-custom"
 BR2_TOOLCHAIN_EXTERNAL_PREFIX="arm-none-linux-gnueabihf"
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-none-linux-gnueabihf"
-# BR2_TOOLCHAIN_EXTERNAL_GCC_9 is not set
+BR2_TOOLCHAIN_EXTERNAL_GCC_9=y
 # BR2_TOOLCHAIN_EXTERNAL_GCC_8 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_7 is not set
-BR2_TOOLCHAIN_EXTERNAL_GCC_6=y
+# BR2_TOOLCHAIN_EXTERNAL_GCC_6 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_5 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_9 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_8 is not set
@@ -280,7 +281,7 @@ BR2_TOOLCHAIN_EXTERNAL_GCC_6=y
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_2 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_1 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_0 is not set
-# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_20 is not set
+BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_20=y
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_19 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_18 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_17 is not set
@@ -294,7 +295,7 @@ BR2_TOOLCHAIN_EXTERNAL_GCC_6=y
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_9 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_8 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_7 is not set
-BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_6=y
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_6 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_5 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_4 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_3 is not set
@@ -390,7 +391,21 @@ BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_3=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_4=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_5=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_6=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST="4.6"
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_7=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_8=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_9=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_10=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_11=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_12=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_13=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_14=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_15=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_16=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_17=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_18=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_19=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_20=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST="4.20"
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_3=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_4=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_5=y
@@ -400,7 +415,10 @@ BR2_TOOLCHAIN_GCC_AT_LEAST_4_8=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_9=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_5=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_6=y
-BR2_TOOLCHAIN_GCC_AT_LEAST="6"
+BR2_TOOLCHAIN_GCC_AT_LEAST_7=y
+BR2_TOOLCHAIN_GCC_AT_LEAST_8=y
+BR2_TOOLCHAIN_GCC_AT_LEAST_9=y
+BR2_TOOLCHAIN_GCC_AT_LEAST="9"
 BR2_TOOLCHAIN_HAS_MNAN_OPTION=y
 BR2_TOOLCHAIN_HAS_SYNC_1=y
 BR2_TOOLCHAIN_HAS_SYNC_2=y
@@ -526,10 +544,7 @@ BR2_PACKAGE_KODI_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MPV is not set
 # BR2_PACKAGE_MULTICAT is not set
 # BR2_PACKAGE_MUSEPACK is not set
-
-#
-# ncmpc needs a toolchain w/ C++, wchar, threads, gcc >= 7
-#
+# BR2_PACKAGE_NCMPC is not set
 # BR2_PACKAGE_OPUS_TOOLS is not set
 BR2_PACKAGE_PULSEAUDIO_HAS_ATOMIC=y
 # BR2_PACKAGE_PULSEAUDIO is not set
@@ -1429,6 +1444,7 @@ BR2_PACKAGE_PYTHON3_ZLIB=y
 # BR2_PACKAGE_PYTHON_NESTED_DICT is not set
 # BR2_PACKAGE_PYTHON_NETADDR is not set
 # BR2_PACKAGE_PYTHON_NETIFACES is not set
+# BR2_PACKAGE_PYTHON_NETWORKMANAGER is not set
 # BR2_PACKAGE_PYTHON_NETWORKX is not set
 BR2_PACKAGE_PYTHON_NUMPY_ARCH_SUPPORTS=y
 BR2_PACKAGE_PYTHON_NUMPY=y
@@ -1735,7 +1751,14 @@ BR2_PACKAGE_LIBGPG_ERROR_SYSCFG="arm-unknown-linux-gnueabi"
 # BR2_PACKAGE_LIBUECC is not set
 # BR2_PACKAGE_MBEDTLS is not set
 BR2_PACKAGE_NETTLE=y
-# BR2_PACKAGE_OPENSSL is not set
+BR2_PACKAGE_OPENSSL=y
+BR2_PACKAGE_LIBOPENSSL=y
+BR2_PACKAGE_LIBOPENSSL_TARGET_ARCH="linux-armv4"
+# BR2_PACKAGE_LIBOPENSSL_BIN is not set
+# BR2_PACKAGE_LIBOPENSSL_ENGINES is not set
+# BR2_PACKAGE_LIBRESSL is not set
+BR2_PACKAGE_HAS_OPENSSL=y
+BR2_PACKAGE_PROVIDES_OPENSSL="libopenssl"
 BR2_PACKAGE_PROVIDES_HOST_OPENSSL="host-libopenssl"
 # BR2_PACKAGE_RHASH is not set
 # BR2_PACKAGE_TINYDTLS is not set
@@ -1909,10 +1932,6 @@ BR2_PACKAGE_WEBKITGTK_ARCH_SUPPORTS=y
 BR2_PACKAGE_WPEWEBKIT_ARCH_SUPPORTS=y
 
 #
-# wpewebkit needs a toolchain w/ C++, wchar, threads, dynamic library, gcc >= 7
-#
-
-#
 # wpewebkit needs an OpenGL ES w/ EGL-capable Wayland backend
 #
 # BR2_PACKAGE_ZBAR is not set
@@ -1923,10 +1942,7 @@ BR2_PACKAGE_WPEWEBKIT_ARCH_SUPPORTS=y
 #
 # BR2_PACKAGE_ACSCCID is not set
 # BR2_PACKAGE_BCM2835 is not set
-
-#
-# c-periphery needs a toolchain w/ kernel headers >= 4.8
-#
+# BR2_PACKAGE_C_PERIPHERY is not set
 # BR2_PACKAGE_CCID is not set
 # BR2_PACKAGE_DTC is not set
 BR2_PACKAGE_GNU_EFI_ARCH_SUPPORTS=y
@@ -1943,10 +1959,7 @@ BR2_PACKAGE_GNU_EFI_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBFTDI is not set
 # BR2_PACKAGE_LIBFTDI1 is not set
 # BR2_PACKAGE_LIBGPHOTO2 is not set
-
-#
-# libgpiod needs kernel headers >= 4.8
-#
+# BR2_PACKAGE_LIBGPIOD is not set
 # BR2_PACKAGE_LIBGUDEV is not set
 # BR2_PACKAGE_LIBHID is not set
 # BR2_PACKAGE_LIBIIO is not set
@@ -2135,6 +2148,7 @@ BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBCURL_PROXY_SUPPORT=y
 BR2_PACKAGE_LIBCURL_COOKIES_SUPPORT=y
 BR2_PACKAGE_LIBCURL_EXTRA_PROTOCOLS_FEATURES=y
+# BR2_PACKAGE_LIBCURL_OPENSSL is not set
 # BR2_PACKAGE_LIBCURL_GNUTLS is not set
 BR2_PACKAGE_LIBCURL_TLS_NONE=y
 # BR2_PACKAGE_LIBDNET is not set
@@ -2158,7 +2172,7 @@ BR2_PACKAGE_LIBCURL_TLS_NONE=y
 # BR2_PACKAGE_LIBMODBUS is not set
 # BR2_PACKAGE_LIBMODSECURITY is not set
 # BR2_PACKAGE_LIBNATPMP is not set
-# BR2_PACKAGE_LIBNDP is not set
+BR2_PACKAGE_LIBNDP=y
 # BR2_PACKAGE_LIBNET is not set
 # BR2_PACKAGE_LIBNETCONF2 is not set
 # BR2_PACKAGE_LIBNETFILTER_ACCT is not set
@@ -2354,10 +2368,7 @@ BR2_PACKAGE_PROTOBUF_ARCH_SUPPORTS=y
 # BR2_PACKAGE_SKALIBS is not set
 # BR2_PACKAGE_SPHINXBASE is not set
 # BR2_PACKAGE_TINYCBOR is not set
-
-#
-# uvw needs a toolchain w/ NPTL, dynamic library, C++, gcc >= 7
-#
+# BR2_PACKAGE_UVW is not set
 # BR2_PACKAGE_XAPIAN is not set
 
 #
@@ -2531,10 +2542,7 @@ BR2_PACKAGE_ETHTOOL_PRETTY_PRINT=y
 # BR2_PACKAGE_FLANNEL is not set
 # BR2_PACKAGE_FPING is not set
 # BR2_PACKAGE_FREESWITCH is not set
-
-#
-# gerbera needs a toolchain w/ C++, threads, gcc >= 7
-#
+# BR2_PACKAGE_GERBERA is not set
 # BR2_PACKAGE_GESFTPSERVER is not set
 # BR2_PACKAGE_GLORYTUN is not set
 
@@ -2733,7 +2741,7 @@ BR2_PACKAGE_NETWORK_MANAGER=y
 # BR2_PACKAGE_WIREGUARD_TOOLS is not set
 BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
-# BR2_PACKAGE_WIRELESS_TOOLS_LIB is not set
+BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 # BR2_PACKAGE_WIRESHARK is not set
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
