Added a facility to get the list of ME ID information (user/kernel)

--- a/ME/base/so3/dts/refso3.dts
+++ b/ME/base/so3/dts/refso3.dts
@@ -31,9 +31,11 @@
 	me_name = "SOO.refso3";
 	
 	/* Short description */
-	me_shortdesc = "This is the standard reference ME that can be used as template or simply to \
-		        perform various tests.";
-	
+	me_shortdesc =
+			
+"This is the standard reference ME that can be used as template or simply to \
+perform various tests. This variant has no rootfs (only kernel threads).";
+
 	frontends {
 		/* Enabling vdummy for testing purposes */
 		vdummy {
