--- a/ME/base/so3/dts/refso3_ramfs.dts
+++ b/ME/base/so3/dts/refso3_ramfs.dts
@@ -34,7 +34,8 @@
 	me_shortdesc =
 			
 "This is the standard reference ME that can be used as template or simply to \
-perform various tests.";
+perform various tests. This variant includes a rootfs with some user space \
+applications.";
 
 	frontends {
 		
