--- a/ME/base/so3/dts/net.dts
+++ b/ME/base/so3/dts/net.dts
@@ -26,7 +26,7 @@
 	domain-size = <0x4000000>;
 	
 	/* SPID on 128-bit encoding */
-	spid = <0x0040000000000001>;
+	spid = /bits/ 64 <0x0040000000000001>;
 		
 	/* Name of this ME */
 	me_name = "SOO.net";
