--- a/ME/base/so3/dts/refso3.dts
+++ b/ME/base/so3/dts/refso3.dts
@@ -25,7 +25,7 @@
 	domain-size = <0x1000000>;
 	
 	/* SPID on 128-bit encoding */
-	spid = <0x0010000000000001>;
+	spid = /bits/ 64 <0x0010000000000001>;
 	
 	/* Name of this ME */
 	me_name = "SOO.refso3";
